# verysleepy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  osmodules.txt  sleepy.vcxproj  sleepy.vcxproj.filters  verysleepy.imp
src/: version.h.in
src/crashback/client/: client.cpp
src/profiler/: debugger.cpp  debugger.h  processinfo.cpp  processinfo.h  profiler.cpp  profiler.h  profilerthread.cpp  profilerthread.h  symbolinfo.cpp  symbolinfo.h  threadinfo.cpp  threadinfo.h
src/res/: sleepy.rc
src/utils/: WoW64.cpp  WoW64.h  container.h  dbginterface.cpp  dbginterface.h  mythread.h  osutils.cpp  osutils.h  sortlist.cpp  stringutils.cpp  stringutils.h
src/wxProfilerGUI/: CallstackView.cpp  CallstackView.h  aboutdlg.cpp  aboutdlg.h  capturewin.cpp  capturewin.h  contextmenu.cpp  contextmenu.h  database.cpp  database.h  latesymbolinfo.cpp  latesymbolinfo.h  launchdlg.cpp  launchdlg.h  logview.cpp  logview.h  mainwin.cpp  mainwin.h  optionsdlg.cpp  optionsdlg.h  processlist.cpp  processlist.h  proclist.cpp  proclist.h  profilergui.cpp  profilergui.h  sourceview.cpp  sourceview.h  threadlist.cpp  threadlist.h  threadpicker.cpp  threadpicker.h  threadsview.cpp  threadsview.h
